--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.1.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
